fixed building without config.json widgets

--- a/forms/index.html
+++ b/forms/index.html
@@ -59,6 +59,6 @@
 		</div>
 
 		<script src="//localhost:35729/livereload.js"></script>
-		<script type="text/javascript"  src="../build/js/enketo.grunt.js"></script>
+		<script type="text/javascript"  src="../build/js/enketo-bundle.js"></script>
 	</body>
 </html>
